module8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servertest-service
spec:
  type: NodePort
  ports:
    - port: 8000
      nodePort: 30066
  selector:
    app: my-go-app
